Fixed holiday grid alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -622,7 +622,7 @@
    grid-gap: 1rem;
    margin-top: 1rem;
    margin-bottom: 1rem;
-   margin-left: 1rem;
+   /* margin-left: 1rem; */
    margin-right: 1rem;
    width: 100%;
    padding: 2rem;
